2001-05-11  Havoc Pennington  <hp@redhat.com>

	* configure.in: bump version to 1.0.1

	* gconf/gconfd.c (signal_handler): on SIGUSR1, enable/disable
	debug spew.

	* gconf/gconf-internals.c (gconf_log): use a runtime variable to
	decide whether to log debug messages

	* gconf/gconf-database.c, gconf/gconfd.c, gconf/gconf-internals.c:
	Change some GCL_WARNING to GCL_DEBUG to chill out logging of
	fairly normal events

2001-04-17  Darin Adler  <darin@eazel.com>

	* gconf/Makefile.am: Another try at that. This time for sure.

2001-04-17  Darin Adler  <darin@eazel.com>

	* gconf/Makefile.am: Now that we are not distributing built sources
	we need some more dependencies to get the Tinderbox working.

2001-04-17  Michael Meeks  <michael@ximian.com>

	* gconf/Makefile.am (dist-hook): don't distribute built
	sources.

Wed Apr 11 08:07:11 2001  George Lebl <jirka@5z.com>

	* gconf/gconf.c (gconf_engine_unref): If unreffing the default engine
	  set the default_engine pointer to NULL

2001-03-26  Robin * Slomkowski  <rslomkow@eazel.com>

	* gconf.spec.in: added .pc files

2001-03-23  Martin Baulig  <baulig@suse.de>

	* gconf.pc.in, gconfgtk.pc.in: New files.

	* Makefile.am: Create .pc files and install them.

2001-03-13  Ramiro Estrugo  <ramiro@eazel.com>

	* backends/xml-entry.c:
	* gconf/gconftool.c:
	Add inclusion of <gnome-xml/xmlmemory.h> to fix the fact that
	'xmlFree' is undefined.  This was caused by the last free
	vs. xmlFree change.
	
2001-03-13  Kjartan Maraas  <kmaraas@gnome.org>

	* backends/xml-entry.c: Fix to use xmlFree() instead of free().
	* gconf/gconftool.c: Same here.
	
2001-03-12  Timur Bakeyev  <timur@gnu.org>

	* Makefile.am: Made warning printing a bit nicer.
	
2001-03-11  Havoc Pennington  <hp@redhat.com>

	* configure.in: 1.0.0, woo-hoo!

2001-03-06  Havoc Pennington  <hp@redhat.com>

	* configure.in: bump version to 0.51
	
	* gconf/gconfd.c (gconf_main): change the periodic timeout to 15
	minutes, to be a bit more aggressive about cleanup.